# Whiteboard-B3

./: CMakeLists.txt  README.md  log.txt  main.cpp  mainwindow.h  resources.qrc
models/: client.cpp  client.h  curseur.h  curseurwidget.cpp  curseurwidget.h  idClient.h  image.h  logHelper.cpp  logHelper.h  password.h  point.h  serveurtcp.cpp  serveurtcp.h
windows/: board.cpp  board.h  formulaireconnexion.cpp  formulaireconnexion.h  formulaireconnexion.ui  formulairehebergement.cpp  formulairehebergement.h  formulairehebergement.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  test.cpp  test.h  test.ui  whiteBoard.ui  whiteboard.cpp  whiteboard.h
windows/ui/: formulaireconnexion.ui  mainwindow.ui
